rholang-tree-sitter/grammar.js
        source_file: $ => repeat($._proc),

        _proc: $ => choice(
            $.par,
            $.send_sync,
            $.send_method,
            $.new,
            $.ifElse,
            $.let,
            $.bundle,
            $.match,
            $.choice,
            $.contract,
            $.agent_block,
            $.input,
            $.send,
            $.signed_term,
            $.token_stack,
            $._proc_expression
        ),

        par: $ => prec.left(0, seq($._proc, '|', $._proc)),

        new: $ => prec(1, seq(
            'new',
            field('decls', $.name_decls),
            'in',
            field('proc', $._proc))),

        ifElse: $ => prec.right(1, seq(
            'if', '(', field('condition', $._proc), ')',
            field('consequence', $._proc),
            optional(seq(
                'else',
                field('alternative', $._proc)))
        )),

        bundle: $ => prec(2, seq(
            field('bundle_type', $._bundle),
            field('proc', $.block))),

        match: $ => prec(2, seq(
            'match',
            field('expression', $._proc_expression),
            '{',
            field('cases',
                alias(repeat1($.case), $.cases)),
            '}'
        )),

        contract: $ => prec(2, seq(
            'contract',
            field('name', $.name),
            '(', optional(field('formals', $.names)), ')',
            '=',
            field('proc', $.block)
        )),

        // Agent block sugar (FIP 2025-08-20 Agents + 2026-01-28 Private Methods).
        // Desugars at parse time per Agents.md:19-35 to:
        //   for (r, <ctorPtrns> <= fooCtor) {
        //     new this, private in {
        //       for (...@args <= this)    { match args { /* pub  */ } } |
        //       for (...@args <= private) { match args { /* priv */ } } |  (only if private decls)
        //       Pc |
        //       r!(bundle+{*this})
        //     }
        //   }
        input: $ => prec(2, seq(
            'for', '(', field('receipts', $.receipts), ')',
            field('proc', choice($.block, $.signed_cont))
        )),

        // Greg app:concrete PSignedInput: a signed receive continuation
        // `for(...) {% SignedProc %}` (the body is a signed process, no trailing
        // `[s]` — the wrapper-with-signature `{% P %}[s]` is the OUTER signed_term).
        send: $ => prec(3, seq(
            field('channel', $.name),
            field('send_type', $._send_type),
            field('inputs', alias($._proc_list, $.inputs))
        )),

        // ─── Cost-accounted Rholang surface ──────────────────────────────────
        // Constructs + semantics are authoritative in the mettail
        // cost-accounting worktree ({p}_s, () | s:S, g | #P | s*s, meter(K)) and
        // the cost-accounted-rho paper (sugars, joins, located purses). The
        // concrete ASCII delimiters here are a collision-safe rendering (bare
        // {P}_s collides with `block`; bare s:S with `map` key:value).

        // Signed term {P}_s (worktree `Wrap`).
        _proc_expression: $ => choice(
            $._ground_expression,
            $._parenthesized,
            $.add,
            $.and,
            $.concat,
            $.conjunction,
            $.diff,
            $.disjunction,
            $.div,
            $.eq,
            $.eval,
            $.gt,
            $.gte,
            $.interpolation,
            $.lt,
            $.lte,
            $.matches,
            $.method,
            $.mod,
            $.mult,
            $.neg,
            $.negation,
            $.neq,
            $.not,
            $.or,
            $.sub,
            $.var_ref
        ),

        // expressions in precedence order

        eq: $ => prec.left(6, seq($._proc, '==', $._proc)),
        gt: $ => prec.left(7, seq($._proc, '>', $._proc)),
        concat: $ => prec.left(8, seq($._proc, '++', $._proc)),
        add: $ => prec.left(8, seq($._proc, '+', $._proc)),
        mult: $ => prec.left(9, seq($._proc, '*', $._proc)),
        div: $ => prec.left(9, seq($._proc, '/', $._proc)),
        mod: $ => prec.left(9, seq($._proc, '%', $._proc)),
        method: $ => prec(11, seq(
            field('receiver', $._proc),
            '.',
            field('name', $.var),
            field('args', alias($._proc_list, $.args)))
        ),
        eval: $ => prec(12, seq('*', $.name)),
        name_decls: $ => commaSep1($.name_decl),
        name_decl: $ => seq($.var, optional(seq('(', field('uri', $.uri_literal), ')'))),

        // let declarations
        _bundle: $ => choice(
            $.bundle_read,
            $.bundle_write,
            $.bundle_equiv,
            $.bundle_read_write),
        bundle_write: $ => 'bundle+',
        case: $ => seq(
            field('pattern', $._proc),
            optional(seq('where', field('guard', $._proc))),
            '=>',
            field('proc', $._proc)
        ),

        // branch in select expression
        // Optional `where` guard: only commit (consume messages) if every
        // spatial pattern matches AND the guard evaluates to true.
        // Guard-false is indistinguishable from a spatial mismatch.
        receipts: $ => semiSep1($.receipt),
        receipt: $ => seq(
            conc1(choice($.linear_bind, $.repeated_bind, $.peek_bind, $.signed_bind)),
            optional(seq('where', field('guard', $._proc)))
        ),

        // Greg app:concrete SignedBind: a per-clause signed bind `{% y <- x %}[s]`
        // (Axis-C join — each rendezvous surface is funded independently). Plain
        // binds (linear_bind, etc.) remain unsigned; signed and plain binds compose
        // with `&` inside one receipt.
        linear_bind: $ => seq(
            optional(field('names', $.names)),
            '<-',
            field('input', $._source)
        ),

        peek_bind: $ => seq(
            optional(field('names', $.names)),
            '<<-',
            field('input', $.name)
        ),

        // source definitions
        _source: $ => choice(
            $.simple_source,
            $.receive_send_source,
            $.send_receive_source,
            $.send_method_source),

        simple_source: $ => $.name,
        _send_type: $ => choice($.send_single, $.send_multiple),
        send_single: $ => '!',
        send_multiple: $ => '!!',

        // ground terms and expressions

        block: $ => seq('{', $._proc, '}'),

        bool_literal: $ => choice('true', 'false'),
        long_literal: $ => token(/-?\d+/),
        string_literal: $ => token(/"([^"\\]|(\\[0nrt\\"])|(\\[0-9]+))*"/),
        uri_literal: $ => token(/`[^`]+`/),

        nil: $ => 'Nil',

        // Collections
        collection: $ => choice($.list, $.tuple, $.set, $.map, $.pathmap),

        list: $ => seq('[', commaSep($._proc), optional($._proc_remainder), ']'),

        map: $ => seq('{', commaSep($.key_value_pair), optional($._proc_remainder), '}'),
        key_value_pair: $ => seq(field('key', $._proc), ':', field('value', $._proc)),

        tuple: $ => choice(
            seq('(', $._proc, ',)'),
            seq('(', commaSep1($._proc), ')')
        ),

        _proc_remainder: $ => seq('...', field('remainder', $._proc_var)),

        // process lists
        _proc_list: $ => seq('(', commaSep($._proc), ')'),

        // process variables and names
        quote: $ => prec(12, seq('@', $._proc)),
        wildcard: $ => '_',
        var: $ => token(/[a-zA-Z]([a-zA-Z0-9_'])*|_([a-zA-Z0-9_'])+/),

        names: $ => choice(seq(commaSep1($.name), optional($._name_remainder)), $._name_remainder),
        _name_remainder: $ => seq('...', '@', field('cont', $._proc_var)),

        // comments
